# scenario-analysis-debug

./: package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
flows/query-data/: .flow.ui.oo.json  flow.oo.yaml
flows/query-data/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
tasks/CustomPreviewTable/: __init__.py  task.oo.yaml
tasks/CustomPreviewTable/oo-render/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
tasks/CustomPreviewTable/oo-render/dev/: dev.main.tsx
tasks/CustomPreviewTable/oo-render/src/: App.module.css  App.tsx  render.tsx
tasks/PreviewTable/: __init__.py  task.oo.yaml
tasks/TransforToCSV/: __init__.py  task.oo.yaml
