[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "kmmoonlight",email = "kmmoonlight@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
